--- a/docs/hands_on/tutorial1_c_chain.ipynb
+++ b/docs/hands_on/tutorial1_c_chain.ipynb
@@ -5,9 +5,7 @@
    "id": "f132d6ec",
    "metadata": {},
    "source": [
-    "# Tutorial 1:  Quantum Transport in a One-Dimensional Chain\n",
-    "\n",
-    "A quick start for DeePTB-NEGF."
+    "# Tutorial 1:  Quantum Transport in a One-Dimensional Chain"
    ]
   },
   {
@@ -116,7 +114,9 @@
     "\n",
     " \n",
     "NEGF connects *microscopic Hamiltonians* (from first principles or tight-binding) with *observable transport quantities* (DOS,  current), incorporating the quantum effects naturally.\n",
-    "This makes it an essential tool for nanoelectronics and quantum device simulations.\n"
+    "This makes it an essential tool for nanoelectronics and quantum device simulations.\n",
+    "\n",
+    "In **DPNEGF**, the DeePTB model (either DeePTB-SK or DeePTB-E3) is employed to predict the electronic Hamiltonian with first-principles accuracy, after which the efficiently implemented NEGF method is used to calculate quantum transport properties.\n"
    ]
   },
   {
