--- a/docs/hands_on/tutorial1_c_chain.ipynb
+++ b/docs/hands_on/tutorial1_c_chain.ipynb
@@ -26,11 +26,11 @@
     "\n",
     "In this tutorial, you will learn \n",
     "1. how to load DeePTB model and plot band structure\n",
-    "2. how to calculate the tranmission spectrum\n",
+    "2. how to calculate the transmission spectrum\n",
     "   \n",
     "For demonstration, we use a one-dimensional chain as an example.\n",
     "\n",
-    "### Requirement\n",
+    "### Requirements\n",
     "\n",
     "DeePTB and DPNEGF installed. Detailed installation instructions can be found in README.\n"
    ]
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "04d77b4f",
    "metadata": {},
    "outputs": [
@@ -219,8 +219,9 @@
    "source": [
     "from dptb.nn.build import build_model\n",
     "import json\n",
-    "model =  \"nnsk_C_new.json\" # the model for demonsration\n",
-    "model_json = json.load(open(model))\n",
+    "model =  \"nnsk_C_new.json\" # the model for demonstration\n",
+    "with open(model) as f:\n",
+    "    model_json = json.load(f)\n",
     "model = build_model(model,\n",
     "                    model_options= model_json['model_options'],\n",
     "                    common_options=model_json['common_options'])"
@@ -231,7 +232,7 @@
    "id": "146abc51",
    "metadata": {},
    "source": [
-    "After the model is loaded, bands for specific structures can be ploted. \n",
+    "After the model is loaded, bands for specific structures can be plotted. \n",
     "\n",
     "Here we load the full system and split it into unit cell."
    ]
