update tutorial by delete wrong outputs

--- a/docs/hands_on/tutorial1_c_chain.ipynb
+++ b/docs/hands_on/tutorial1_c_chain.ipynb
@@ -180,10 +180,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "463ca65d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DPNEGF INFO    ================================================================================\n",
+      "DPNEGF INFO                                      Version Info                                  \n",
+      "DPNEGF INFO    --------------------------------------------------------------------------------\n",
+      "DPNEGF INFO    DPNEGF               : 0.1.1.dev97+bccd946\n",
+      "DPNEGF INFO    DeePTB               : 2.1.2.dev53+5b97981\n",
+      "DPNEGF INFO    ================================================================================\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from dpnegf.utils.loggers import set_log_handles\n",
     "import logging\n",
@@ -204,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "04d77b4f",
    "metadata": {},
    "outputs": [
@@ -493,13 +507,7 @@
       "DPNEGF INFO    ------ k-point for NEGF -----\n",
       "DPNEGF INFO    Gamma Center: True\n",
       "DPNEGF INFO    Time Reversal: True\n",
-      "DPNEGF INFO    k-points Num: 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "DPNEGF INFO    k-points Num: 1\n",
       "DPNEGF INFO    k-points: [[0 0 0]]\n",
       "DPNEGF INFO    k-points weights: [1.]\n",
       "DPNEGF INFO    --------------------------------\n",
