--- a/docs/hands_on/tutorial1_c_chain.ipynb
+++ b/docs/hands_on/tutorial1_c_chain.ipynb
@@ -619,6 +619,8 @@
    "id": "0fd1a663",
    "metadata": {},
    "source": [
+    "### Results Analysis\n",
+    "\n",
     "We can inspect the outputs of the NEGF run by loading the results file (`negf.out.pth`). The output  contains:\n",
     "- `T_avg`: the total transmission as a function of energy,\n",
     "- `T_k`: k-point resolved transmission (if k-sampling is used),\n",
