remove shell dependency

--- a/docs/hands_on/tutorial1_c_chain.ipynb
+++ b/docs/hands_on/tutorial1_c_chain.ipynb
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0f64a6b8",
    "metadata": {},
    "outputs": [
@@ -406,9 +406,9 @@
     "negf_input_file =  \"negf_chain_new.json\" \n",
     "structure =  \"chain.vasp\" \n",
     "output = \"../negf_output\"  \n",
-    "if os.path.exists(output):\n",
-    "    os.system('rm -rf %s' % output)\n",
-    "os.makedirs(output)\n",
+    "if os.path.isdir(output):\n",
+    "    shutil.rmtree(output, ignore_errors=True)\n",
+    "os.makedirs(output, exist_ok=True)\n",
     "\n",
     "with open(negf_input_file, \"r\") as f:\n",
     "    negf_json = json.load(f)\n"
@@ -601,110 +601,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "524faa1e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/personal/DeepTB/dptb_Zjj/dpnegf/examples/atomic_chain_api/input_files\n",
-      "sisl is not installed.Thus the input for TBtrans can not be generated, please install it first!\n",
-      "tbtrans is not in the Environment PATH. Thus the input for TBtrans can be generated but not run.\n",
-      "================================================================================\n",
-      "            _______  .______   .__   __.  _______   _______  _______            \n",
-      "           |       \\ |   _  \\  |  \\ |  | |   ____| /  _____||   ____|           \n",
-      "           |  .--.  ||  |_)  | |   \\|  | |  |__   |  |  __  |  |__              \n",
-      "           |  |  |  ||   ___/  |  . `  | |   __|  |  | |_ | |   __|             \n",
-      "           |  '--'  ||  |      |  |\\   | |  |____ |  |__| | |  |                \n",
-      "             |_______/ | _|      |__| \\__| |_______| \\______| |__|              \n",
-      "--------------------------------------------------------------------------------\n",
-      "                       DPNEGF version 0.1.1.dev97+bccd946                       \n",
-      "================================================================================\n",
-      "DPNEGF INFO    ================================================================================\n",
-      "DPNEGF INFO                                      Version Info                                  \n",
-      "DPNEGF INFO    --------------------------------------------------------------------------------\n",
-      "DPNEGF INFO    DPNEGF               : 0.1.1.dev97+bccd946\n",
-      "DPNEGF INFO    DeePTB               : 2.1.2.dev53+5b97981\n",
-      "DPNEGF INFO    ================================================================================\n",
-      "\n",
-      "DPNEGF WARNING The model option atomic_radius in nnsk is not defined in input model_options, set to v1.\n",
-      "DPNEGF INFO    ------ k-point for NEGF -----\n",
-      "DPNEGF INFO    Gamma Center: True\n",
-      "DPNEGF INFO    Time Reversal: True\n",
-      "DPNEGF INFO    k-points Num: 1\n",
-      "DPNEGF INFO    k-points: [[0 0 0]]\n",
-      "DPNEGF INFO    k-points weights: [1.]\n",
-      "DPNEGF INFO    --------------------------------\n",
-      "DPNEGF WARNING AtomicData_options is extracted from input file. This may be not consistent with the model options. Please be careful and check the cutoffs.\n",
-      "DPNEGF INFO    The AtomicData_options is:\n",
-      "               {\n",
-      "                   \"r_max\": 3.0,\n",
-      "                   \"er_max\": null,\n",
-      "                   \"oer_max\": null\n",
-      "               }\n",
-      "DPNEGF INFO    Lead principal layers translational equivalence error (on average): 1.732052e-10 (threshold: 1.000000e-05)\n",
-      "DPNEGF INFO    Lead principal layers translational equivalence error (on average): 1.732051e-10 (threshold: 1.000000e-05)\n",
-      "/opt/mamba/envs/dpnegf-dev/lib/python3.10/site-packages/torch/nested/__init__.py:107: UserWarning: The PyTorch API of nested tensors is in prototype stage and will change in the near future. (Triggered internally at ../aten/src/ATen/NestedTensorImpl.cpp:178.)\n",
-      "  return torch._nested_tensor_from_tensor_list(ts, dtype, None, device, None)\n",
-      "DPNEGF INFO    The coupling width of lead_L is 1.\n",
-      "DPNEGF INFO    The coupling width of lead_R is 1.\n",
-      "DPNEGF INFO    --------------------------------------------------------------------------------\n",
-      "DPNEGF INFO    The Hamiltonian has been initialized by model.\n",
-      "DPNEGF INFO    ================================================================================\n",
-      "DPNEGF INFO    -------------Fermi level calculation-------------\n",
-      "DPNEGF WARNING No doping detected in lead_L, fixed_charge = 0.0\n",
-      "DPNEGF WARNING No doping detected in lead_R, fixed_charge = 0.0\n",
-      "DPNEGF INFO    Number of electrons in lead_L: {'C': 1.0}\n",
-      "DPNEGF INFO    Number of electrons in lead_R: {'C': 1.0}\n",
-      "DPNEGF INFO    -----Calculating Fermi level for lead_L-----\n",
-      "DPNEGF INFO    KPOINTS  kmesh sampling: 11 kpoints\n",
-      "DPNEGF WARNING Overwrite the r_max setting in the model with the r_max setting in the AtomicData_options: 3.0\n",
-      "DPNEGF WARNING This is very dangerous, please make sure you know what you are doing.\n",
-      "DPNEGF INFO    Getting eigenvalues from the model.\n",
-      "DPNEGF INFO    Calculating Fermi energy in the case of spin-degeneracy.\n",
-      "DPNEGF WARNING Fermi level bisection did not converge under tolerance 1e-10 after 51 iterations.\n",
-      "DPNEGF INFO    q_cal: 3.999994485346824, total_electrons: 4.0, diff q: 5.514653175886508e-06\n",
-      "DPNEGF INFO    Estimated E_fermi: -13.638588428497314 based on the valence electrons setting nel_atom : {'C': 1.0} .\n",
-      "DPNEGF INFO    -----Calculating Fermi level for lead_R-----\n",
-      "DPNEGF INFO    KPOINTS  kmesh sampling: 11 kpoints\n",
-      "DPNEGF WARNING Overwrite the r_max setting in the model with the r_max setting in the AtomicData_options: 3.0\n",
-      "DPNEGF WARNING This is very dangerous, please make sure you know what you are doing.\n",
-      "DPNEGF INFO    Getting eigenvalues from the model.\n",
-      "DPNEGF INFO    Calculating Fermi energy in the case of spin-degeneracy.\n",
-      "DPNEGF WARNING Fermi level bisection did not converge under tolerance 1e-10 after 51 iterations.\n",
-      "DPNEGF INFO    q_cal: 4.000002782981872, total_electrons: 4.0, diff q: 2.7829818716185173e-06\n",
-      "DPNEGF INFO    Estimated E_fermi: -13.638587474822998 based on the valence electrons setting nel_atom : {'C': 1.0} .\n",
-      "DPNEGF INFO    -------------------------------------------------\n",
-      "DPNEGF INFO    Zero bias case detected.\n",
-      "DPNEGF INFO    Fermi level for lead_L: -13.638588428497314\n",
-      "DPNEGF INFO    Fermi level for lead_R: -13.638587474822998\n",
-      "DPNEGF INFO    Electrochemical potential for lead_L: -13.638588428497314\n",
-      "DPNEGF INFO    Electrochemical potential for lead_R: -13.638587474822998\n",
-      "DPNEGF INFO    Reference energy E_ref: -13.638588428497314\n",
-      "DPNEGF INFO    =================================================\n",
-      "\n",
-      "DPNEGF INFO    Merging 150 tmp self energy files into /personal/DeepTB/dptb_Zjj/dpnegf/examples/atomic_chain_api/input_files/../negf_output_cli/results/self_energy/self_energy_leadL.h5\n",
-      "DPNEGF INFO    Merge complete.\n",
-      "DPNEGF INFO    Merging 150 tmp self energy files into /personal/DeepTB/dptb_Zjj/dpnegf/examples/atomic_chain_api/input_files/../negf_output_cli/results/self_energy/self_energy_leadR.h5\n",
-      "DPNEGF INFO    Merge complete.\n",
-      "DPNEGF INFO    Properties computation at k = [0.0000,0.0000,0.0000]\n",
-      "DPNEGF INFO    computing green's function at e = -1.500\n",
-      "DPNEGF INFO    computing green's function at e = -1.198\n",
-      "DPNEGF INFO    computing green's function at e = -0.896\n",
-      "DPNEGF INFO    computing green's function at e = -0.594\n",
-      "DPNEGF INFO    computing green's function at e = -0.292\n",
-      "DPNEGF INFO    computing green's function at e = 0.010\n",
-      "DPNEGF INFO    computing green's function at e = 0.312\n",
-      "DPNEGF INFO    computing green's function at e = 0.614\n",
-      "DPNEGF INFO    computing green's function at e = 0.916\n",
-      "DPNEGF INFO    computing green's function at e = 1.218\n",
-      "DPNEGF INFO    negf calculation successfully completed.\n",
-      "\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Command line for DPNEGF\n",
     "! pwd\n",
