--- a/docs/hands_on/tutorial1_c_chain.ipynb
+++ b/docs/hands_on/tutorial1_c_chain.ipynb
@@ -642,6 +642,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b32cf91e",
+   "metadata": {},
+   "source": [
+    "The result file is a dict containing all the results."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "7a29b9ff",
