--- a/docs/hands_on/tutorial1_c_chain.ipynb
+++ b/docs/hands_on/tutorial1_c_chain.ipynb
@@ -160,8 +160,12 @@
    ],
    "source": [
     "import os\n",
+    "from pathlib import Path\n",
     "workdir='../../examples/atomic_chain_api/input_files'\n",
-    "os.chdir(workdir)\n",
+    "wd = Path(workdir)\n",
+    "if not wd.is_dir():\n",
+    "    raise FileNotFoundError(f\"Workdir '{wd}' not found. Please adjust 'workdir'.\")\n",
+    "os.chdir(wd)\n",
     "print(\"\\t\".join(sorted(os.listdir(\".\"))))"
    ]
   },
