add example hBN

--- a/docs/hands_on/tutorial2_2d_mat.ipynb
+++ b/docs/hands_on/tutorial2_2d_mat.ipynb
@@ -10,6 +10,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c514189b",
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dptb esk bn_spds.json -o hbn_spd_model\n",
+    "dptb config -m hbn_spd_model/sktb.json -tr -sk ./\n",
+    "\n",
+    "\"onsite\": {\n",
+    "    \"method\": \"strain\"\n",
+    "}\n",
+    "\n",
+    "dptb train input.json -i ../extra_baseline/hbn_spd_model/sktb.json -o train_out\n",
+    "dptb run band.json -i train/train_out/checkpoint/nnsk.best.pth -o band_plot"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "026e2584",
    "metadata": {},
