add fig and PL instructions

--- a/docs/hands_on/tutorial2_2d_mat.ipynb
+++ b/docs/hands_on/tutorial2_2d_mat.ipynb
@@ -44,9 +44,9 @@
    "metadata": {},
    "source": [
     "## 1. Quantum Transport in Graphene\n",
-    "Two-dimensional (2D) materials have attracted significant attention in condensed matter physics and nanoelectronics owing to their unique electronic, optical, and transport properties. Their atomically thin nature enables ultimate device scaling, while their diverse electronic structures—ranging from metallic to semiconducting to insulating—provide a versatile platform for next-generation applications.\n",
+    "Two-dimensional (2D) materials have attracted significant attention in condensed matter physics and nanoelectronics owing to their unique properties. \n",
     "\n",
-    "Graphene is the natural starting point for studying quantum transport in 2D materials. As the first experimentally realized 2D material, it combines a simple lattice structure with unique electronic features such as linear Dirac dispersion and high carrier mobility. These characteristics make graphene both historically significant and methodologically convenient as a benchmark system.\n",
+    "Graphene is the natural starting point for studying quantum transport in 2D materials. As the first experimentally realized 2D material, it combines a simple lattice structure with unique electronic features such as linear Dirac dispersion and high carrier mobility. \n",
     "\n",
     "In this section, we will use graphene to introduce the basic steps of quantum transport calculations, including the evaluation of electrode self-energies and transmission spectra. The same methodology will later be extended to hBN and MoS<sub>2</sub>."
    ]
@@ -61,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "POSCAR\tband.json\tband_plot\tband_plot_api\textr_baseline\tnegf.json\tnegf_output\tnegf_output_k100\tnegf_output_k20\tnegf_output_k50\tstru_negf.xyz\tstruct.xyz\ttrain\n"
+      "POSCAR\tband.json\tband_plot\tband_plot_api\textra_baseline\tnegf.json\tnegf_output\tnegf_output_k100\tnegf_output_k20\tnegf_output_k50\tstru_negf.xyz\tstruct.xyz\ttrain\n"
      ]
     }
    ],
@@ -89,8 +89,14 @@
       "DPNEGF INFO    ================================================================================\n",
       "DPNEGF INFO                                      Version Info                                  \n",
       "DPNEGF INFO    --------------------------------------------------------------------------------\n",
-      "DPNEGF INFO    DPNEGF               : 0.1.1.dev143+4f25276\n",
-      "DPNEGF INFO    DeePTB               : 2.1.2.dev53+5b97981\n",
+      "DPNEGF INFO    DPNEGF               : 0.1.1.dev148+0e0863a\n",
+      "DPNEGF INFO    DeePTB               : 2.1.2.dev53+5b97981\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "DPNEGF INFO    ================================================================================\n",
       "\n"
      ]
@@ -123,10 +129,18 @@
     "\n",
     "After switching to the `train` directory  and copying the input file here as `input.json` ,the training process can be started with:\n",
     "`dptb train input.json -i ../extra_baseline/grap_spd_model/sktb.json -o train_out`.\n",
-    "We recommend that users carefully examine the `input.json` file to understand the meaning of each parameter. \n",
-    "For 2D materials, the onsite mode should be set to `strain`, which removes the degeneracy of onsite energies for orbitals with the same angular momentum. It is an essential adjustment for 2D systems. For example, the onsite energies for  $p_x,p_y,p_z$ in graphene should not be identical considering the geometry.\n",
     "\n",
-    "Once training has converged, the resulting model can be loaded to plot and analyze the band structure.\n"
+    "We recommend that users carefully examine the `input.json` file to understand the meaning of each parameter. \n",
+    "For 2D materials, the onsite mode should be set to `strain`, which removes the degeneracy of onsite energies for orbitals with the same angular momentum. It is an essential adjustment for 2D systems. For example, the onsite energies for  $p_x,p_y,p_z$ in graphene should not be identical considering the geometry. Once training has converged, the resulting model can be loaded to plot and analyze the band structure.\n",
+    "\n",
+    "**SUMMARY:**\n",
+    "\n",
+    "In `./extra_baseline`: \n",
+    "- `dptb esk c_spd.json -o grap_spd_model`\n",
+    "- `dptb config -m grap_spd_model/sktb.json -tr -sk ./`\n",
+    "\n",
+    "In `./train`:\n",
+    "- `dptb train input.json -i ../extra_baseline/grap_spd_model/sktb.json -o train_out`"
    ]
   },
   {
@@ -154,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "31407e92",
    "metadata": {},
    "outputs": [
@@ -164,7 +178,7 @@
        "Atoms(symbols='C2', pbc=True, cell=[[2.5039999485, 0.0, 0.0], [-1.2519999743, 2.1685275665, 0.0], [0.0, 0.0, 30.0]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "1041ae1c",
    "metadata": {},
    "outputs": [
@@ -250,12 +264,20 @@
    "id": "cca83808",
    "metadata": {},
    "source": [
-    "- 说明dpnegf的结构文件需要两个Principal Layer倒置"
+    "### 1.2 Principal layer and self-energy calculation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4dea8b3",
+   "metadata": {},
+   "source": [
+    "Now we can pay attention to quantum transport simulaitons."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "558867cd",
    "metadata": {},
    "outputs": [
@@ -279,6 +301,63 @@
     "\n",
     "with open(negf_input_file, \"r\") as f:\n",
     "    negf_json = json.load(f)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6471bf68",
+   "metadata": {},
+   "source": [
+    "A critical component is `AtomicData_options`, which specifies the cutoff parameters for the model:\n",
+    "- `r_max`: the cutoff value for bond considering in TB model\n",
+    "- `er_max`: the cutoff value for environment correction, should set for nnsk+env correction model\n",
+    "- `oer_max`: the cutoff value for onsite correction in nnsk model, need to set in strain mode\n",
+    "\n",
+    "In other words, `AtomicData_options` determines the **locality** of the model, i.e., how far atomic interactions are considered in the calculation.\n",
+    "\n",
+    "The code would determine the `AtomicData_options` automatically with DeePTB v2.2. At the same time, it can be visiualized conviently\n",
+    "by `NEGF.update_atomicdata_options`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1c95296d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DPNEGF INFO    The AtomicData_options is:\n",
+      "               {\n",
+      "                   \"r_max\": {\n",
+      "                       \"C-C\": 4.99\n",
+      "                   },\n",
+      "                   \"er_max\": null,\n",
+      "                   \"oer_max\": 6.3\n",
+      "               }\n"
+     ]
+    }
+   ],
+   "source": [
+    "AtomicData_options = NEGF.update_atomicdata_options(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8890a34b",
+   "metadata": {},
+   "source": [
+    "The largest cutoff value determines the maximum interaction distance, which is critical for defining the electrode geometry in NEGF simulations.\n",
+    "\n",
+    "A key requirement of the self-energy algorithm implemented in `DPNEGF` is to define two **principal layers** (PL) for each electrode. The length of each PL must exceed the maximum interaction distance to ensure correct treatment of interactions. In other words, the PLs are restricted to **nearest-neighbor** interactions only.\n",
+    "\n",
+    "Additionally, the algorithm requires that the PLs within the same electrode be identical, **differing only by a translation** along the transport direction.\n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <img src=\"./stru_negf_PL.png\" alt=\"jupyter\" style=\"width:80%;\"/>\n",
+    "</div>"
    ]
   },
   {
