mv fig to _static

--- a/docs/hands_on/tutorial2_2d_mat.ipynb
+++ b/docs/hands_on/tutorial2_2d_mat.ipynb
@@ -363,10 +363,10 @@
     "The following figure illustrates the device/lead region and principal layers in the lead:\n",
     "\n",
     "<div style=\"text-align: center;\">\n",
-    "    <img src=\"./stru_negf_PL.png\" alt=\"Geometry region in DPNEGF and Principal Layers in lead\" style=\"width:75%;\"/>\n",
+    "    <img src=\"../_static/stru_negf_PL.png\" alt=\"Geometry region in DPNEGF and Principal Layers in lead\" style=\"width:75%;\"/>\n",
     "</div>\n",
     "\n",
-    "In this case, the length of PL should be larger than 6.3 $\\AA$. However, too long PL is unnecessary for the computing cost. Considering both the translation requirement and nearest-neighbor interaction, we set the length of PL as 8.67 $\\AA$.\n",
+    "In this case, the length of PL should be larger than 6.3 Angstrom. However, too long PL is unnecessary for the computing cost. Considering both the translation requirement and nearest-neighbor interaction, we set the length of PL as 8.67 Angstrom.\n",
     "\n",
     "Now we can strat the NEGF calculation!"
    ]
