--- a/docs/hands_on/tutorial2_2d_mat.ipynb
+++ b/docs/hands_on/tutorial2_2d_mat.ipynb
@@ -384,11 +384,7 @@
    "id": "975c31d7",
    "metadata": {},
    "source": [
-    "For NEGF calculation on systems with leads having periodicity along the transverse direction, it's natural to calculate the $k$-resolved transmission $T(k,E)$ and sum up for the total transmission $T(E)$:\n",
-    "$$\n",
-    "T(E) = \\sum_k w_k T(k,E)\n",
-    "$$\n",
-    "where $w_k$ is the weight for the specified $k$.\n",
+    "For NEGF calculation on systems with leads having periodicity along the transverse direction, it's natural to calculate the $k$-resolved transmission $T(k,E)$ and sum up for the total transmission $T(E) = \\sum_k w_k T(k,E)$ where $w_k$ is the weight for the specified $k$.\n",
     "\n",
     "Firstly, we only consider the Gamma point calculation for graphene."
    ]
